pihole/deployment/pihole.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
spec:
  selector:
    app.kubernetes.io/name: pihole
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-web-svc
