pihole/deployment/pihole.gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pihole-gateway
spec:
  gatewayClassName: pihole-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
