pihole/deployment/pihole.httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-httproute
spec:
  parentRefs:
  - name: pihole-gateway
  hostnames:
  - rpi.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: pihole-service
      port: 80
