pihole/deployment/pihole.ingress.yml
## pihole.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: rpi.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole-service
              port:
                number: 80
